--- a/pages/index.html
+++ b/pages/index.html
@@ -52,11 +52,19 @@
         </div>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
+    <h1></h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- <script>
+      fetch("/test")
+        .then((response) => response.json())
+        .then(
+          (data) => (document.querySelector("h1").textContent = data.message)
+        )
+        .catch((error) => console.error(error));
+    </script> -->
   </body>
 </html>
