--- a/pages/main.html
+++ b/pages/main.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <!-- <h1 class="title">HOW BAD IS YOUR <span class="spotify">SPOTIFY</span>?</h1> -->
+    <div class="title">A REally short page</div>
     <div class="container"></div>
+    <footer>This is my footer</footer>
     <script>
       function sleep(ms) {
         return new Promise((resolve) => setTimeout(resolve, ms));
@@ -29,11 +31,11 @@
         "https://i.scdn.co/image/ab67616d0000b2736b405be80472a13cd4b2e80b",
         "https://i.scdn.co/image/ab67616d0000b27306596cef717cbdce8b874778",
         "https://i.scdn.co/image/ab67616d0000b2731da4d9f0f6af58d5e2ad9852",
-        "https://i.scdn.co/image/ab67616d0000b2732a1073dd2629bffca89c2288"
+        "https://i.scdn.co/image/ab67616d0000b2732a1073dd2629bffca89c2288",
       ];
       fetching();
-      // populateBackground(images) 
-      fallingImages(images);
+      // populateBackground(images)
+      // fallingImages(images);
 
       // This is BAD i am doing this to stall until the LLM is finished, I need a better way to do it
       // setTimeout(() => {
@@ -55,15 +57,14 @@
           // image.classList.add("falling-image");
           var randomIndex = Math.floor(Math.random() * images.length);
           var randomSize = Math.floor(Math.random() * (400 - 200) + 200);
-          var randomStartHeight = Math.floor(Math.random() * (800 + 200) - 200)
+          var randomStartHeight = Math.floor(Math.random() * (800 + 200) - 200);
           image.src = images[randomIndex];
           image.style.left = Math.random() * +innerWidth + "px";
           image.style.height = randomSize + "px";
           image.style.width = randomSize + "px";
           image.style.top = randomStartHeight + "px";
-          console.log(randomStartHeight)
+          console.log(randomStartHeight);
           document.body.appendChild(image);
-
         }
       }
 
@@ -77,7 +78,7 @@
           image.style.left = Math.random() * +innerWidth + "px";
           image.style.height = randomSize + "px";
           image.style.width = randomSize + "px";
-          image.style.top = "-400px"
+          image.style.top = "-400px";
           document.body.appendChild(image);
           await sleep(Math.random(3) * 1000 + 1000);
         }
