--- a/pages/main.html
+++ b/pages/main.html
@@ -14,7 +14,56 @@
     <!-- <h1 class="title">HOW BAD IS YOUR <span class="spotify">SPOTIFY</span>?</h1> -->
     <div class="title">A REally short page</div>
     <div class="container"></div>
-    <footer>This is my footer</footer>
+    <footer>
+      <div class="logos">
+        <div class="logos-slide">
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273c9fec49c8930fb10e4756dfe"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273adfadf345224340773549507"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b2734afc20695127f696ec16f828"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273f239a45be61917fd61898241"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273583ce664168dca88fdc1c4c1"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273310909bc20d587f8792a7039"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b2732a1073dd2629bffca89c2288"
+          />
+        </div>
+        <div class="logos-slide">
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273c9fec49c8930fb10e4756dfe"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273adfadf345224340773549507"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b2734afc20695127f696ec16f828"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273f239a45be61917fd61898241"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273583ce664168dca88fdc1c4c1"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b273310909bc20d587f8792a7039"
+          />
+          <img
+            src="https://i.scdn.co/image/ab67616d0000b2732a1073dd2629bffca89c2288"
+          />
+        </div>
+      </div>
+    </footer>
     <script>
       function sleep(ms) {
         return new Promise((resolve) => setTimeout(resolve, ms));
