--- a/pages/main.html
+++ b/pages/main.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- <h1 class="title">HOW BAD IS YOUR <span class="spotify">SPOTIFY</span>?</h1> -->
-    <div class="title">A REally short page</div>
+    <!-- <div class="title">Spotify</div> -->
     <div class="container"></div>
     <footer>
       <div class="logos">
@@ -124,7 +124,7 @@
           //Creates a blinking cursor element, then deletes it before the next cycle
           let cursor = await textTypewriterEffect(paragraph, text);
           // await sleep(4000);
-          paragraph.removeChild(cursor);
+          // paragraph.removeChild(cursor);
         }
       }
 
